tests/ui/moves/use_of_moved_value_clone_suggestions.stderr
error[E0382]: the type `Rc` does not implement `Copy`
  --> $DIR/use_of_moved_value_clone_suggestions.rs:3:9
   |
LL | fn duplicate_rc<T>(t: std::rc::Rc<T>) -> (std::rc::Rc<T>, std::rc::Rc<T>) {
   |                    - this move could be avoided by cloning the original `Rc`, which is inexpensive
LL |     (t, t)
   |      -  ^ value used here after move
   |      |
   |      value moved here
   |
   = note: consider using `Rc::clone`
help: clone the value to increment its reference count
   |
LL |     (t.clone(), t)
   |       ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
